trunk/Archive2/be/a8d17d7b6881de/output
main.cpp:17:21: error: no matching member function for call to 'foo'
    std::cout << bq.foo<int, void>() << " " << bq.foo<double, void>() << "\n";
                 ~~~^~~~~~~~~~~~~~
main.cpp:6:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
main.cpp:10:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
main.cpp:17:51: error: no matching member function for call to 'foo'
    std::cout << bq.foo<int, void>() << " " << bq.foo<double, void>() << "\n";
                                               ~~~^~~~~~~~~~~~~~~~~
main.cpp:6:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
main.cpp:10:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
2 errors generated.
